add menu for page

--- a/location/index.html
+++ b/location/index.html
@@ -65,7 +65,8 @@ Fresh, authentic Vietnamese pho and street food in Gouger Street precinct. Fully
 
     <link rel="preconnect" href="https://siteassets.parastorage.com/pages/singlePage/viewerViewModeJson" crossorigin>
 
-
+    <link rel="stylesheet" type="text/css"
+          href="/css/menu.css"/>
 
 </head>
 
@@ -1064,70 +1065,95 @@ Fresh, authentic Vietnamese pho and street food in Gouger Street precinct. Fully
                                                             #comp-j3ccz2pvinlineContent-gridContainer > [id$="-rotated-wrapper"] > * {
                                                                 pointer-events: auto;
                                                             }</style>
-                                                        <div id="comp-j3ccz2pvinlineContent-gridWrapper"
-                                                             data-mesh-internal="true">
-                                                            <div id="comp-j3ccz2pvinlineContent-gridContainer"
+                                                        <div>
+                                                            <ul class="flex flex-row justify-center" style="margin-top: 20px">
+                                                                <li class="dropdown">
+                                                                    <a href="#">Home</a>
+                                                                </li>
+                                                                <li class="dropdown"><a href="contact/">Contact</a> </li>
+                                                                <li class="dropdown"><a href="location/" >Location</a> </li>
+                                                                <li class="dropdown"><a href="policy.pdf" >Policy</a></li>
+                                                                <li class="dropdown">
+                                                                    <a href="#">Cities</a>
+                                                                    <ul class="dropdown-content">
+                                                                        <li>
+                                                                            <a href="">Ho Chi Minh</a>
+                                                                        </li>
+                                                                        <li>
+                                                                            <a href="">Ha Noi</a>
+                                                                        </li>
+                                                                    </ul>
+                                                                </li>
+                                                            </ul>
+
+                                                            <div id="comp-j3ccz2pvinlineContent-gridWrapper"
                                                                  data-mesh-internal="true">
-                                                                <div data-packed="false" data-vertical-text="false"
-                                                                     style="width:566px;height:auto;min-height:48px;pointer-events:none"
-                                                                     data-min-height="48" class="txtNew"
-                                                                     id="comp-j3cczxiu"><h2 class="font_2"
-                                                                                            style="text-align:center;">
-                                                                    <span class="color_12">locate us</span></h2></div>
-                                                                <div data-packed="false" data-vertical-text="false"
-                                                                     style="width:566px;height:auto;min-height:74px;pointer-events:none"
-                                                                     data-min-height="74" class="txtNew"
-                                                                     id="comp-j3cczxiy"><p class="font_7"
-                                                                                           style="text-align:center;">
-                                                                    <span class="color_12">address // 23 field street adelaide 5000</span>
-                                                                </p>
+                                                                <div id="comp-j3ccz2pvinlineContent-gridContainer"
+                                                                     data-mesh-internal="true">
+                                                                    <div data-packed="false" data-vertical-text="false"
+                                                                         style="width:566px;height:auto;min-height:48px;pointer-events:none"
+                                                                         data-min-height="48" class="txtNew"
+                                                                         id="comp-j3cczxiu"><h2 class="font_2"
+                                                                                                style="text-align:center;">
+                                                                        <span class="color_12">locate us</span>
+                                                                    </h2>
+                                                                    </div>
+                                                                    <div data-packed="false" data-vertical-text="false"
+                                                                         style="width:566px;height:auto;min-height:74px;pointer-events:none"
+                                                                         data-min-height="74" class="txtNew"
+                                                                         id="comp-j3cczxiy"><p class="font_7"
+                                                                                               style="text-align:center;">
+                                                                        <span class="color_12">address // 23 field street adelaide 5000</span>
+                                                                    </p>
 
-                                                                    <p class="font_7"><span class="color_12"><span
-                                                                            class="wixGuard">​</span></span></p>
+                                                                        <p class="font_7"><span class="color_12"><span
+                                                                                class="wixGuard">​</span></span></p>
 
-                                                                    <p class="font_7" style="text-align:center;"><span
-                                                                            class="color_12">free street parking available + Wilson carpark within 100m</span>
-                                                                    </p></div>
+                                                                        <p class="font_7" style="text-align:center;"><span
+                                                                                class="color_12">free street parking available + Wilson carpark within 100m</span>
+                                                                        </p></div>
 
-                                                                <div style="padding: 0 20px; margin: 0 auto 40px; position: relative; z-index: 100">
-                                                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.145367702082!2d138.5653446051964!3d-34.877695804316986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c88527756719%3A0x7b77537f06bb1796!2sYen%20Linh!5e0!3m2!1sen!2s!4v1714987753086!5m2!1sen!2s"  style="border:0; margin: 0 auto" width=450; height=300; allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                                                                </div>
+                                                                    <div style="padding: 0 20px; margin: 0 auto 40px; position: relative; z-index: 100">
+                                                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.145367702082!2d138.5653446051964!3d-34.877695804316986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c88527756719%3A0x7b77537f06bb1796!2sYen%20Linh!5e0!3m2!1sen!2s!4v1714987753086!5m2!1sen!2s"  style="border:0; margin: 0 auto" width=450; height=300; allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                                                    </div>
                                                                     <div> style="transform-origin:center 0.5px;width:550px;height:5px;"
-                                                                     class="style-jukusz02" id="comp-j3ccz2sf"></div>
-                                                                <div data-packed="true" data-vertical-text="false"
-                                                                     style="width:272px;height:auto;pointer-events:none"
-                                                                     class="txtNew" id="comp-j3ccz2rj"><p class="font_8"
-                                                                                                          style="font-size:16px;">
+                                                                        class="style-jukusz02" id="comp-j3ccz2sf"></div>
+                                                                    <div data-packed="true" data-vertical-text="false"
+                                                                         style="width:272px;height:auto;pointer-events:none"
+                                                                         class="txtNew" id="comp-j3ccz2rj"><p class="font_8"
+                                                                                                              style="font-size:16px;">
                                                                     <span style="font-size:16px;"><span
                                                                             class="color_12">phone //&nbsp;<span
                                                                             style="text-decoration:underline;"><a
                                                                             href="tel:+61-08-82118985"
                                                                             data-content="+61-08-82118985"
                                                                             data-type="phone">(08) 8211 8985</a></span></span></span>
-                                                                </p>
+                                                                    </p>
 
-                                                                    <p class="font_8" style="font-size:16px;"><span
-                                                                            style="font-size:16px;"><span
-                                                                            class="color_12"><span
-                                                                            class="wixGuard">​</span></span></span></p>
+                                                                        <p class="font_8" style="font-size:16px;"><span
+                                                                                style="font-size:16px;"><span
+                                                                                class="color_12"><span
+                                                                                class="wixGuard">​</span></span></span></p>
+                                                                    </div>
+                                                                    <div data-is-responsive="false"
+                                                                         style="width:64px;height:19px;"
+                                                                         class="lb1"
+                                                                         id="comp-j3ccz2rr">
+                                                                        <ul aria-label="Social bar" id="comp-j3cd30vvitemsContainer" class="lb1itemsContainer">
+                                                                            <li style="width:19px;height:19px;margin-bottom:0;margin-right:26px;display:inline-block">
+                                                                                <a href="https://www.facebook.com/pages/Y%E1%BA%BFn-Linh-Restaurant/28956488781743" target="_blank" data-content="https://www.facebook.com/pages/Y%E1%BA%BFn-Linh-Restaurant/28956488781743" data-type="external" rel="noopener" >
+                                                                                    <img src="/images/icons/facebook.webp" alt="facebook - yenlinh">
+                                                                                </a>
+                                                                            </li>
+                                                                            <li style="width:19px;height:19px;margin-bottom:0;margin-right:26px;display:inline-block">
+                                                                                <a href="https://www.instagram.com/_yenlinh/" target="_blank" data-content="https://www.instagram.com/_yenlinh/" data-type="external" rel="noopener">
+                                                                                    <img src="/images/icons/instagram.webp" alt="Instagram - yenlinh">
+                                                                                </a>
+                                                                            </li>
+                                                                        </ul>                                                                </div>
                                                                 </div>
-                                                                <div data-is-responsive="false"
-                                                                     style="width:64px;height:19px;"
-                                                                     class="lb1"
-                                                                     id="comp-j3ccz2rr">
-                                                                    <ul aria-label="Social bar" id="comp-j3cd30vvitemsContainer" class="lb1itemsContainer">
-                                                                        <li style="width:19px;height:19px;margin-bottom:0;margin-right:26px;display:inline-block">
-                                                                            <a href="http://www.facebook.com/yenlinhrestaurant" target="_blank" data-content="http://www.facebook.com/yenlinhrestaurant" data-type="external" rel="noopener" >
-                                                                                <img src="../images/icons/facebook.webp" alt="facebook - yenlinh">
-                                                                            </a>
-                                                                        </li>
-                                                                        <li style="width:19px;height:19px;margin-bottom:0;margin-right:26px;display:inline-block">
-                                                                            <a href="https://www.instagram.com/_yenlinh/" target="_blank" data-content="https://www.instagram.com/_yenlinh/" data-type="external" rel="noopener">
-                                                                                <img src="../images/icons/instagram.webp" alt="Instagram - yenlinh">
-                                                                            </a>
-                                                                        </li>
-                                                                    </ul>                                                                </div>
                                                             </div>
+
                                                         </div>
                                                     </div>
                                                 </div>
