--- a/menu/index.html
+++ b/menu/index.html
@@ -1085,7 +1085,7 @@ Fresh, authentic Vietnamese pho and street food in Gouger Street precinct. Fully
                                                                     </p>
 
                                                                     <p class="font_7" style="text-align:center;"><a
-                                                                            href="../policy.pdf"
+                                                                            href="/policy.pdf"
                                                                             target="_blank" data-type="document"><span
                                                                             style="color:#FFFFFF;"><span
                                                                             style="text-decoration:underline;">click here</span></span></a><span
@@ -1220,13 +1220,13 @@ Fresh, authentic Vietnamese pho and street food in Gouger Street precinct. Fully
                                                                      id="comp-jd5kil3d">
                                                                     <ul aria-label="Social bar" id="comp-j3cd30vvitemsContainer" class="lb1itemsContainer">
                                                                         <li style="width:19px;height:19px;margin-bottom:0;margin-right:26px;display:inline-block">
-                                                                            <a href="http://www.facebook.com/yenlinhrestaurant" target="_blank" data-content="http://www.facebook.com/yenlinhrestaurant" data-type="external" rel="noopener" >
-                                                                                <img src="../images/icons/facebook.webp" alt="facebook - yenlinh">
+                                                                            <a href="https://www.facebook.com/pages/Y%E1%BA%BFn-Linh-Restaurant/28956488781743" target="_blank" data-content="https://www.facebook.com/pages/Y%E1%BA%BFn-Linh-Restaurant/28956488781743" data-type="external" rel="noopener" >
+                                                                                <img src="/images/icons/facebook.webp" alt="facebook - yenlinh">
                                                                             </a>
                                                                         </li>
                                                                         <li style="width:19px;height:19px;margin-bottom:0;margin-right:26px;display:inline-block">
                                                                             <a href="https://www.instagram.com/_yenlinh/" target="_blank" data-content="https://www.instagram.com/_yenlinh/" data-type="external" rel="noopener">
-                                                                                <img src="../images/icons/instagram.webp" alt="Instagram - yenlinh">
+                                                                                <img src="/images/icons/instagram.webp" alt="Instagram - yenlinh">
                                                                             </a>
                                                                         </li>
                                                                     </ul>                                                                      </div>
