add link to menu page

--- a/contact/index.html
+++ b/contact/index.html
@@ -2640,6 +2640,8 @@ Fresh, authentic Vietnamese pho and street food in Gouger Street precinct. Fully
                                                                        <li class="dropdown">
                                                                            <a href="/index.html">Home</a>
                                                                        </li>
+                                                                       <li class="dropdown"><a href="/menu/">Menu</a> </li>
+
                                                                        <li class="dropdown"><a href="/contact/">Contact</a> </li>
                                                                        <li class="dropdown"><a href="/location/" >Location</a> </li>
                                                                        <li class="dropdown"><a href="/policy.pdf" >Policy</a></li>
