--- a/location/index.html
+++ b/location/index.html
@@ -1068,11 +1068,13 @@ Fresh, authentic Vietnamese pho and street food in Gouger Street precinct. Fully
                                                         <div>
                                                             <ul class="flex flex-row justify-center" style="margin-top: 20px">
                                                                 <li class="dropdown">
-                                                                    <a href="#">Home</a>
+                                                                    <a href="/index.html">Home</a>
                                                                 </li>
-                                                                <li class="dropdown"><a href="contact/">Contact</a> </li>
-                                                                <li class="dropdown"><a href="location/" >Location</a> </li>
-                                                                <li class="dropdown"><a href="policy.pdf" >Policy</a></li>
+                                                                <li class="dropdown"><a href="/menu/">Menu</a> </li>
+
+                                                                <li class="dropdown"><a href="/contact/">Contact</a> </li>
+                                                                <li class="dropdown"><a href="/location/" >Location</a> </li>
+                                                                <li class="dropdown"><a href="/policy.pdf" >Policy</a></li>
                                                                 <li class="dropdown">
                                                                     <a href="#">Cities</a>
                                                                     <ul class="dropdown-content">
