--- a/index.html
+++ b/index.html
@@ -1116,9 +1116,10 @@
                                                                         <li class="dropdown">
                                                                             <a href="#">Home</a>
                                                                         </li>
-                                                                        <li class="dropdown"><a href="contact/">Contact</a> </li>
-                                                                        <li class="dropdown"><a href="location/" >Location</a> </li>
-                                                                        <li class="dropdown"><a href="policy.pdf" >Policy</a></li>
+                                                                        <li class="dropdown"><a href="/menu/">Menu</a> </li>
+                                                                        <li class="dropdown"><a href="/contact/">Contact</a> </li>
+                                                                        <li class="dropdown"><a href="/location/" >Location</a> </li>
+                                                                        <li class="dropdown"><a href="/policy.pdf" >Policy</a></li>
                                                                         <li class="dropdown">
                                                                             <a href="#">Cities</a>
                                                                             <ul class="dropdown-content">
